# blogc

./: .gitignore  .gitmodules  .travis.yml  .yatr.yml  CMakeLists.txt  LICENSE  Makefile.am  README.md  autogen.sh  blogc.spec.in  config.h.in  configure.ac
.github/workflows/: main.yml  yatr.yaml
.travis/: build.sh  deploy.sh  test-run.sh
.travis/targets/: clang-analyzer.sh  dist-srpm.sh  distcheck.sh  github-lambda.sh  make-embedded.sh  static.sh  valgrind.sh  win32.sh  win64.sh
build-aux/: build-debian.sh  build-static-all.sh  build-static.sh  build-travis.sh  build-windows.sh  check-make-embedded.sh  clang-analyzer.sh  travis-build-github-lambda.sh  travis-build.sh  travis-deploy.sh  valgrind.sh
cmake/cpack/: install_license_and_readme.cmake  install_version.cmake
cmake/scripts/: test.sh
cmake/try_compile/: ldwrap.c
debian/: blogc-git-receiver.install  blogc-make.install  blogc-runserver.install  blogc.install  changelog  control  copyright  rules
m4/: squareball.m4
maint/: README.md  download_release.py
man/: CMakeLists.txt  blogc-git-receiver.1.ronn  blogc-make.1.ronn  blogc-pagination.7.ronn  blogc-runserver.1.ronn  blogc-source.7.ronn  blogc-template.7.ronn  blogc-toctree.7.ronn  blogc.1.ronn  blogcfile.5.ronn  index.txt
src/: CMakeLists.txt  blogc-git-receiver.c  blogc-runserver.c  blogc.c  content-parser.c  content-parser.h  datetime-parser.c  datetime-parser.h  debug.c  debug.h  directives.c  directives.h  error.c  error.h  file.c  file.h  loader.c  loader.h  main.c  output.c  output.h  renderer.c  renderer.h  source-grammar.h  source-grammar.leg  source-parser.c  source-parser.h  template-grammar.h  template-grammar.leg  template-parser.c  template-parser.h  utf8.c  utf8.h  utils.c  utils.h
src/blogc/: CMakeLists.txt  content-parser.c  content-parser.h  datetime-parser.c  datetime-parser.h  debug.c  debug.h  error.c  error.h  errors.c  errors.h  file.c  file.h  filelist-parser.c  filelist-parser.h  funcvars.c  funcvars.h  loader.c  loader.h  main.c  renderer.c  renderer.h  rusage.c  rusage.h  source-parser.c  source-parser.h  sysinfo.c  sysinfo.h  template-parser.c  template-parser.h  toctree.c  toctree.h
src/blogc-git-receiver/: CMakeLists.txt  main.c  post-receive.c  post-receive.h  pre-receive-parser.c  pre-receive-parser.h  pre-receive.c  pre-receive.h  settings.c  settings.h  shell-command-parser.c  shell-command-parser.h  shell.c  shell.h
src/blogc-github-lambda/: lambda_function.py  lambda_function.py.in
src/blogc-make/: CMakeLists.txt  atom.c  atom.h  ctx.c  ctx.h  error.c  error.h  exec-native.c  exec-native.h  exec.c  exec.h  httpd.c  httpd.h  lighttpd.c  lighttpd.h  main.c  reloader.c  reloader.h  rules.c  rules.h  sass.c  sass.h  settings.c  settings.h  utils.c  utils.h
src/blogc-runserver/: CMakeLists.txt  httpd-utils.c  httpd-utils.h  httpd.c  httpd.h  main.c  mime.c  mime.h
src/common/: CMakeLists.txt  compat.c  compat.h  config-parser.c  config-parser.h  error.c  error.h  file.c  file.h  sort.c  sort.h  stdin.c  stdin.h  thread-pool.c  thread-pool.h  thread.h  thread_pthread.c  thread_windows.c  utf8.c  utf8.h  utils.c  utils.h
src/utils/: mem.c  slist.c  strings.c  trie.c  utils.h
tests/: CMakeLists.txt  check_content_parser.c  check_datetime_parser.c  check_error.c  check_loader.c  check_renderer.c  check_source_grammar.c  check_source_parser.c  check_template_grammar.c  check_template_parser.c  check_utf8.c  check_utils.c
tests/blogc/: CMakeLists.txt  check_blogc.sh.in  check_content_parser.c  check_datetime_parser.c  check_error.c  check_filelist_parser.c  check_funcvars.c  check_loader.c  check_renderer.c  check_rusage.c  check_source_parser.c  check_sysinfo.c  check_sysinfo2.c  check_template_parser.c  check_toctree.c
tests/blogc-git-receiver/: CMakeLists.txt  check_post_receive.c  check_post_receive.sh  check_post_receive.sh.in  check_pre_receive.sh  check_pre_receive.sh.in  check_pre_receive_parser.c  check_settings.c  check_shell.sh  check_shell.sh.in  check_shell_command_parser.c
tests/blogc-make/: CMakeLists.txt  check_atom.c  check_blogc_make.sh.in  check_exec.c  check_rules.c  check_settings.c  check_utils.c
tests/blogc-runserver/: CMakeLists.txt  check_httpd_utils.c  check_mime.c
tests/common/: CMakeLists.txt  check_config_parser.c  check_error.c  check_sort.c  check_stdin.c  check_utf8.c  check_utils.c
travis/: deploy.sh
travis/targets/: distcheck.sh
